Remove gitFirst, getLast functions of jdk21